--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "react-admin-firebase",
   "description": "A firebase data provider for the React Admin framework",
-  "version": "0.8.14",
+  "version": "0.8.15",
   "dependencies": {
-    "firebase": "^7.3.0",
+    "firebase": "7.3.0",
     "path-browserify": "^1.0.0",
     "ra-realtime": "^2.8.x",
     "react": "^16.x",
