--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "description": "A firebase data provider for the React Admin framework",
   "version": "0.8.16",
   "dependencies": {
-    "firebase": "7.3.0",
+    "firebase": "^7.3.0",
     "path-browserify": "^1.0.0",
     "ra-realtime": "^2.8.x",
     "react": "^16.x",
     "react-admin": "^2.9.x",
     "react-dom": "^16.x",
-    "rxjs": "^6.5.x"
+    "rxjs": "^6.5.x",
+    "lodash": "^4.17.13"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
